# android_sdl2_test

./: README.md
TestJNA/app/: build.gradle
TestJNA/app/src/main/: AndroidManifest.xml
TestJNA/app/src/main/java/jna/test/com/testjna/: Lib.java  MainActivity.java
TestJNA/app/src/main/res/values/: strings.xml
TestJNA/gradle/wrapper/: gradle-wrapper.properties
android_sdl2/: Cargo.toml  build.sh  run.bat
android_sdl2/src/: lib.rs  sdl2.rs  tmp.rs
android_sdl2_test/: Cargo.toml
android_sdl2_test/src/: main.rs
cbrain/: Cargo.toml  ascii.cb  easter.cb  hello.cb
cbrain/src/: cbrain.rs  main.rs
cbrain/src/ga/: genalg.rs  genome.rs  mod.rs
gabf/: Cargo.toml
gabf/src/: main.rs
gabf/src/fitness/: mod.rs
gabf/src/programmer/: interpreter.rs  mod.rs
gabf/src/types/: function.rs
ocl_test/: .gitignore  Cargo.toml
ocl_test/src/: main.rs  main_.rs  main_log.rs  main_log_final.rs  main_resize.rs
paint_test/: Cargo.toml  build.rs
paint_test/old/: lib.rs  sdl2_sys.rs
paint_test/paint/: Cargo.toml  Lunar_Lander_with_Raphael_final.rar  arm_build.sh  build.sh  run.bat  run_release.bat  说明.txt
paint_test/paint/AI-Draw-master/: template.js
paint_test/paint/src/: dna.rs  lib.rs  line.rs  math.rs  picture.rs
paint_test/paint/temp/: Cargo.1.toml  lib.1.rs
paint_test/src/: main.rs
pbrain/: Cargo.toml  最小指令集.txt
pbrain/src/: fitness.rs  ga.rs  main.rs  pbrain.cpp  pbrain.rs
pbrain/src/fitness/: addition.rs  hello.rs  mod.rs  reverse.rs  sort.rs
tenprint/: Cargo.toml
tenprint/src/: context.rs  ga.rs  main.1.rs  main.rs  main_.rs  pbrain.rs
(+2 files in other folders)
