[package]
name = "android_sdl2"
version = "0.1.0"
authors = ["planet0104 <planet0104@gmail.com>"]
build = "build.rs"

[dependencies]
libloading = "*"
lazy_static = "1.0.1"
num = "*"

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.1.2"

[lib]
name = "main"
crate-type=["dylib"]

# [dependencies.sdl2]
#     path = "../rust-sdl2"
#     default-features = false
#     #features = ["image", "ttf"]